[tool.poetry]
name = "onlineforever"
version = "1.0.1"
description = ""
authors = ["nimaisox"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
discord = "^1.7.3"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
